<resources>
    <string name="app_name">GraduationProject</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="passowrd">Password</string>
    <string name="login">LOGIN</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Update or Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="fullName">Full Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="location">Location</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
    <string name="confirm">Confirm</string>
    <string name="delete">Delete</string>
    <string name="log_in_with">Log in With</string>
    <string name="facebook_app_id">2615626898730021</string>
    <string name="fb_login_protocol_scheme">fb2615626898730021</string>


    <string-array name="names">
        <item>ahemd</item>
        <item>ali</item>
        <item>hussin</item>
        <item>zaki</item>
        <item>hossam</item>
        <item>ahemd</item>
        <item>ahemd</item>

    </string-array>


    <string-array name="description">
        <item>ahemd</item>
        <item>ali</item>
        <item>hussin</item>
        <item>zaki</item>
        <item>hossam</item>
        <item>ahemd</item>
        <item>ahemd</item>

    </string-array>


</resources>